--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,27 +3,55 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/skeleton.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/custom.css">
 	</head>
 	<body>
-		<div class="navbar">
-			<a href="/" class="btn">Home</a>
-			<a href="/login" class="btn">Login</a>
-		</div>
-		
-		
-		<div class="login-form">
-			<h2>Sign Up</h2>
-			<form method="POST">
-				<input name="email" placeholder="Email"><br>
-				<input name="password" placeholder="Password" type="password"><br>
+	
+		<div class="container">
+			
+			<div class="navbar">
+				<a href="/">Home</a>
+			</div>
+			
+			<div class="section center">
+				<h3>Sign Up</h3>
+				<form method="POST">
+					<div class="row">
+						<div class="three columns">&nbsp;</div>
+						<div class="six columns">
+							
+							{{ if .UserError}}
+							<label style="color: red; text-align: left;">{{.UserError}}</label>
+							<input class="u-full-width" name="email" placeholder="Email" type="email"><br>
+							{{else if and (not .UserError) (.PasswordError)}}
+							<input class="u-full-width" name="email" placeholder="Email" type="email" value="{{.Username}}"><br>
+							{{else}}
+							<input class="u-full-width" name="email" placeholder="Email" type="email"><br>
+							{{end}}							
+							
+							
+							{{ if .PasswordError}}
+							<label style="color: red; text-align: left;">{{.PasswordError}}</label>
+							{{end}}		
+							<input class="u-full-width" name="password" placeholder="Password" type="password"><br>
+							
+							<div style="padding: 2rem 0 2rem;">							
+								<input class="u-pull-left" type="submit" name="submit" value="Submit">
+							</div>
+							<a class="u-pull-right" href="/login">Login</a>
+						</div>
+						<div class="three columns">&nbsp;</div>
+					</div>
+					
+				</form>
 				
-				<div class="sub-btn">
-					<input type="submit" name="submit" value="Submit">
-				</div>
-				
-			</form>
+			</div>
+			
+			
 		</div>
 		
 	</body>
 </html>
+
