--- a/templates/admin.html
+++ b/templates/admin.html
@@ -40,6 +40,7 @@
 							<th>Email</th>
 							<th>Password</th>
 							<th>Role</th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
@@ -48,6 +49,7 @@
 							<td>{{ .Email }}</td>
 							<td>{{ .Password }}</td>
 							<td>{{ .Role }}</td>
+							<td><a href="/admin?delete=true&email={{.Email}}" class="u-pull-right">Delete</a></td>
 						</tr>
 						{{ end }}
 					</tbody>
